--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -829,8 +829,6 @@ CommitDialog_IgnoreErrors=Ignore warnings and errors
 CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
 CommitDialog_WrongTypeOfCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 CommitDialog_ErrorCreatingCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} could not be created
-CommitDialog_CaretPositionOutOfBounds=The ICommitMessageProvider2 implementation {0} provided the caret position {1}, which exceeds the length of the commit message or is negative. The caret position is ignored.
-CommitDialog_IgnoreCaretPosition=Found multiple implementations of ICommitMessageProvider2. Ignoring caret positioning for {0}.
 
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
 CommitMessageComponent_MessageInvalidAuthor=Invalid author specified. Example: A U Thor <author@example.com>
@@ -896,7 +894,7 @@ CreateRepositoryPage_PleaseSelectDirectoryMessage=Select a directory
 PushResultDialog_title=Push Results: {0}
 PushResultDialog_label=Pushed to {0}
 PushResultDialog_label_failed=Failed pushing to {0}
-PushResultDialog_ConfigureButton=&Configure...
+PushResultDialog_ConfigureButton=C&onfigure...
 PushResultTable_MesasgeText=Message Details
 PushResultTable_repository=Repository
 PushResultTable_statusRemoteRejected=[remote rejected]
@@ -1837,11 +1835,15 @@ StagingView_ReplaceWith=Rep&lace With
 StagingView_LinkSelection=Link with Editor and Selection
 StagingView_replaceWithFileInGitIndex=Replace with &Index
 StagingView_replaceWithHeadRevision=Replace with &HEAD Revision
+StagingView_UnstageAllItemMenuLabel=Remove All Files from Index
+StagingView_UnstageAllItemTooltip=Remove all files including not selected ones from the index
 StagingView_UnstageItemMenuLabel=&Remove from Index
-StagingView_UnstageItemTooltip=Remove Selected Files from Index
+StagingView_UnstageItemTooltip=Remove selected files from the index
 StagingView_UnstagedSort=Sort by state
+StagingView_StageAllItemMenuLabel=&Add All Files to Index
+StagingView_StageAllItemTooltip=Add all files including not selected ones to the index
 StagingView_StageItemMenuLabel=&Add to Index
-StagingView_StageItemTooltip=Add Selected Files to Index
+StagingView_StageItemTooltip=Add selected files to the index
 StagingView_IgnoreItemMenuLabel=&Ignore
 StagingView_IgnoreFolderMenuLabel=Ignore &Folder
 StagingView_DeleteItemMenuLabel=&Delete
